--- a/GrupoA-war/web/inicio.xhtml
+++ b/GrupoA-war/web/inicio.xhtml
@@ -13,7 +13,7 @@
          <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css"></script>
         
     </ui:define>
-    <ui:define name="title">Grupo Scout 39 Santo Angel - Málaga</ui:define>
+    <ui:define name="title">Inicio</ui:define>
 
     <ui:define name="content">
 
