--- a/GrupoA-war/web/crearEvento.xhtml
+++ b/GrupoA-war/web/crearEvento.xhtml
@@ -1,11 +1,11 @@
-<ui:composition template="/WEB-INF/templates/plantillaMonitor.xhtml"
+<ui:composition template="/WEB-INF/templates/plantilla-logueado.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:fn="http://java.sun.com/jsp/jstl/functions">   
+                xmlns:a="http://xmlns.jcp.org/jsf/passthrough">   
     <ui:define name="head">
         <link href="./css/inicio.css" rel="stylesheet" type="text/css" />
          <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
@@ -13,7 +13,7 @@
          <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css"></script>
         
     </ui:define>
-    <ui:define name="title">Grupo Scout 39 Santo Angel - Málaga</ui:define>
+    <ui:define name="title">Crear evento</ui:define>
     <ui:define name="content">
     <c:set var="event" value="#{manejadorEventos.evento}" />     
     <div align="center">
@@ -49,64 +49,10 @@
                     <h:message for="precio" style="color:black"/>
                 </div>
                 <label class="control-label col-sm-2" for="fecha">Día / Mes:</label>
-                <div class="col-sm-10">
-                    <div class="input-group">
-                        <span class="input-group-btn">
-                            <h:selectOneMenu  class="form-control" value="#{manejadorEventos.dia}"> 
-                                <f:selectItem itemValue = "1" itemLabel = "1" /> 
-                                <f:selectItem itemValue = "2" itemLabel = "2" />
-                                <f:selectItem itemValue = "3" itemLabel = "3" /> 
-                                <f:selectItem itemValue = "4" itemLabel = "4" /> 
-                                <f:selectItem itemValue = "5" itemLabel = "5" /> 
-                                <f:selectItem itemValue = "6" itemLabel = "6" /> 
-                                <f:selectItem itemValue = "7" itemLabel = "7" /> 
-                                <f:selectItem itemValue = "8" itemLabel = "8" /> 
-                                <f:selectItem itemValue = "9" itemLabel = "9" /> 
-                                <f:selectItem itemValue = "10" itemLabel = "10" /> 
-                                <f:selectItem itemValue = "11" itemLabel = "11" /> 
-                                <f:selectItem itemValue = "12" itemLabel = "12" /> 
-                                <f:selectItem itemValue = "13" itemLabel = "13" /> 
-                                <f:selectItem itemValue = "14" itemLabel = "14" /> 
-                                <f:selectItem itemValue = "15" itemLabel = "15" /> 
-                                <f:selectItem itemValue = "16" itemLabel = "16" /> 
-                                <f:selectItem itemValue = "17" itemLabel = "17" /> 
-                                <f:selectItem itemValue = "18" itemLabel = "18" /> 
-                                <f:selectItem itemValue = "19" itemLabel = "19" /> 
-                                <f:selectItem itemValue = "20" itemLabel = "20" /> 
-                                <f:selectItem itemValue = "21" itemLabel = "21" /> 
-                                <f:selectItem itemValue = "22" itemLabel = "22" /> 
-                                <f:selectItem itemValue = "23" itemLabel = "23" /> 
-                                <f:selectItem itemValue = "24" itemLabel = "24" /> 
-                                <f:selectItem itemValue = "25" itemLabel = "25" /> 
-                                <f:selectItem itemValue = "26" itemLabel = "26" /> 
-                                <f:selectItem itemValue = "27" itemLabel = "27" /> 
-                                <f:selectItem itemValue = "28" itemLabel = "28" /> 
-                                <f:selectItem itemValue = "29" itemLabel = "29" /> 
-                                <f:selectItem itemValue = "30" itemLabel = "30" /> 
-                                <f:selectItem itemValue = "31" itemLabel = "31" /> 
-                            </h:selectOneMenu>
-                        </span>
-                        <span class="input-group-btn"></span>
-                        <span class="input-group-btn">
-                            <h:selectOneMenu  class="form-control" value="#{manejadorEventos.mes}"> 
-                                <f:selectItem itemValue = "1" itemLabel = "Enero" /> 
-                                <f:selectItem itemValue = "2" itemLabel = "Febrero" />
-                                <f:selectItem itemValue = "3" itemLabel = "Marzo" /> 
-                                <f:selectItem itemValue = "4" itemLabel = "Abril" /> 
-                                <f:selectItem itemValue = "5" itemLabel = "Mayo" /> 
-                                <f:selectItem itemValue = "6" itemLabel = "Junio" /> 
-                                <f:selectItem itemValue = "7" itemLabel = "Julio" /> 
-                                <f:selectItem itemValue = "8" itemLabel = "Agosto" /> 
-                                <f:selectItem itemValue = "9" itemLabel = "Septiembre" /> 
-                                <f:selectItem itemValue = "10" itemLabel = "Octubre" /> 
-                                <f:selectItem itemValue = "11" itemLabel = "Noviembre" /> 
-                                <f:selectItem itemValue = "12" itemLabel = "Diciembre" /> 
-                            </h:selectOneMenu>
-                        </span>
-                    </div>
-                </div>
+                <input class="form-control col-sm-4" type="date" a:name="fecha"/>
             </div>
-            <h:button value="Volver" outcome="inicioM.xhtml"></h:button><h:commandButton value="Guardar" action="#{manejadorEventos.crearEvento()}" ></h:commandButton>
+            <h:button value="Volver" outcome="inicio.xhtml"/>
+            <h:commandButton value="Guardar" action="#{manejadorEventos.crearEvento()}" />
         </h:form>
     </div>
      </ui:define>
