--- a/GrupoA-war/web/miPerfil.xhtml
+++ b/GrupoA-war/web/miPerfil.xhtml
@@ -10,114 +10,230 @@
         <br/>
         <div class="media">
             <div class="col-md-4"> 
-            <img class="img-circle" src="imagenes/fotos_usuarios/castor.jpg" alt="Generic placeholder image" style="width:80%"></img>
+                <img class="img-circle" src="imagenes/fotos_usuarios/castor.jpg" alt="Generic placeholder image" style="width:80%"></img>
             </div>
         </div>
-            <div class="col-md-4">
-                <h1>Perfil de  <h:outputText value="#{controlAutorizacion.usuario.nombreusuario}"/></h1>
-            </div>
-            <br/>
-            <div class="col-md-4">
-                <h3>Datos personales:</h3>
-            </div>
-            <div class="container">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Nombre:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.nombre}"/></td>
-                </tr>
-                <tr>
-                  <td>Apellidos</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.apellidos}"/></td>
-                </tr>
-                <tr>
-                  <td>Email:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.email}"/></td>
-                </tr>
-                <tr>
-                  <td>Fecha de entrada:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.fechaentrada}"/></td>
-                </tr>
-                <tr>
-                  <td>Dni:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.dni}"/></td>
-                </tr>
-                <tr>
-                  <td>Fecha de nacimiento:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.fechanacimiento}"/></td>
-                </tr>
-                <tr>
-                  <td>Dirección postal:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.calle}"/></td>
-                </tr>
-                <tr>
-                  <td>Código postal:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.codigopostal}"/></td>
-                </tr>
-                <tr>
-                  <td>Localidad:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.localidad}"/></td>
-                </tr>
-                <tr>
-                  <td>Provincia:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.provincia}"/></td>
-                </tr>
-                <tr>
-                  <td>Sección</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.cargo}"/></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <c:choose>
+            <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                <c:set var="user" value="#{controlAutorizacion.usuario2}"/>
+            </c:when>
+            <c:otherwise>
+                <c:set var="user" value="#{controlAutorizacion.usuario}"/>
+            </c:otherwise>
+        </c:choose>
+
+        <div class="col-md-4">
+            <h1>Perfil de  <h:outputText value="#{user.nombreusuario}"/></h1>
+        </div>
         <br/>
-            <div class="container"> 
-                <table class="table table-bordered">
-                    <thead class="thead-dark">
-                      <tr>
+        <div class="col-md-4">
+            <h3>Datos personales:</h3>
+        </div>
+        <div class="container">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Nombre:</td>
+                        <td>
+                            <c:choose>
+                                <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                    <h:inputText value="#{user.nombre}"/>
+                                </c:when>
+                                <c:otherwise>
+                                    <h:outputText value="#{user.nombre}"/> 
+                                </c:otherwise>  
+                            </c:choose>                          
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Apellidos</td>
+                        <td>
+                            <c:choose>
+                                <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                    <h:inputText value="#{user.apellidos}"/>
+                                </c:when>
+                                <c:otherwise>
+                                    <h:outputText value="#{user.apellidos}"/>
+                                </c:otherwise>  
+                            </c:choose>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td>
+                            <c:choose>
+                                <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                    <h:inputText value="#{user.email}"/>
+                                </c:when>
+                                <c:otherwise>
+                                    <h:outputText value="#{user.email}"/>
+                                </c:otherwise>  
+                            </c:choose>
+
+                        </td>
+                    </tr>
+                    <c:if test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                        <tr>
+                            <td>Alias</td>
+                            <td><h:inputText value="#{user.nombreusuario}"/></td>
+                        </tr>
+                    </c:if>    
+                    
+                        <tr>
+                            <td>Fecha de entrada:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.fechaentrada}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.fechaentrada}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Dni:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.dni}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.dni}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Fecha de nacimiento:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.fechanacimiento}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.fechanacimiento}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Dirección postal:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.calle}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.calle}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Código postal:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.codigopostal}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.codigopostal}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Localidad:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.localidad}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.localidad}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Provincia:</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.provincia}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.provincia}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Sección</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="#{controlAutorizacion.usuario.cargo=='SECRETARIA'}">
+                                        <h:inputText value="#{user.cargo}"/>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <h:outputText value="#{user.cargo}"/>
+                                    </c:otherwise>  
+                                </c:choose>
+                            </td>
+                        </tr>
+                </tbody>
+            </table>
+        </div>
+        <br/>
+        <div class="container"> 
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                    <tr>
                         <th scope="col">Cuotas actuales</th>
                         <th scope="col">Importe</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Descripción</th>
-                      </tr>
-                    </thead>
-           <ui:repeat value="#{controlPagos.listaCuotas}" var="cuota">
+                    </tr>
+                </thead>
+                <ui:repeat value="#{controlPagos.listaCuotas}" var="cuota">
                     <tbody>
-                      <tr>
-                        <th scope="row"><h:outputText value="#{cuota.id}"/></th>
-                        <td><h:outputText value="#{cuota.importe}"/></td>
-                        <td><h:outputText value="#{cuota.nombre}"/></td>
-                        <td><h:outputText value="#{cuota.descripcion}"/></td>
-                      </tr>
+                        <tr>
+                            <th scope="row"><h:outputText value="#{cuota.id}"/></th>
+                            <td><h:outputText value="#{cuota.importe}"/></td>
+                            <td><h:outputText value="#{cuota.nombre}"/></td>
+                            <td><h:outputText value="#{cuota.descripcion}"/></td>
+                        </tr>
                     </tbody>
-            </ui:repeat>   
-                  </table>
-            </div>
-              <br/>
-              <div class="container">
-              <table class="table col-md-4">
-                    <thead class="thead-dark">
-                      <tr>
+                </ui:repeat>   
+            </table>
+        </div>
+        <br/>
+        <div class="container">
+            <table class="table col-md-4">
+                <thead class="thead-dark">
+                    <tr>
                         <th scope="col">Desglose de pagos</th>
                         <th scope="col">Fecha</th>
-                      </tr>
-                    </thead>
-                        <ui:repeat value="#{controlPagos.listaPagosCuota}" var="pagos">
-                            <tbody>
-                              <tr>
-                                  <th scope="row"><h:outputText value="#{pagos.id}"/></th>
-                                <td><h:outputText value="#{pagos.fecha}"/></td>
-                              </tr>
+                    </tr>
+                </thead>
+                <ui:repeat value="#{controlPagos.listaPagosCuota}" var="pagos">
+                    <tbody>
+                        <tr>
+                            <th scope="row"><h:outputText value="#{pagos.id}"/></th>
+                            <td><h:outputText value="#{pagos.fecha}"/></td>
+                        </tr>
 
-                            </tbody>
-                        </ui:repeat>
-                  </table>
-              </div>
+                    </tbody>
+                </ui:repeat>
+            </table>
+        </div>
     </ui:define>
 </ui:composition>
