--- a/GrupoA-war/web/secretaria.xhtml
+++ b/GrupoA-war/web/secretaria.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/WEB-INF/templates/plantilla_1.xhtml"
+<ui:composition template="/WEB-INF/templates/plantilla-logueado.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -8,7 +8,7 @@
 <ui:define name="content">
 <div id="tag-light-grey">
         <div class="tag-light-grey container">
-            <h1>Bienvenido</h1>
+            <h1>Bienvenido, Francisco</h1>
             <p>La pañoleta del Grupo 39 es azul y blanca. Actualmente, el Grupo está compuesto por cuatro secciones:
                la Manada de Tha, la Tropa de Kim, la Unidad Esculta Siryu y el Clan Rover Almogama.  
                Somos un grupo relativamente pequeño y todas las secciones están muy unidas.
