--- a/GrupoA-war/web/inicioM.xhtml
+++ b/GrupoA-war/web/inicioM.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/WEB-INF/templates/plantilla-logueado.xhtml"
+<ui:composition template="/WEB-INF/templates/plantillaMonitor.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -33,7 +33,7 @@
                                 </table>
                             </div>
                             <p>#{fn:substring(event.descripcion,0,150)}...</p>
-                            <h:commandButton value="Seguir leyendo" action="verEvento.xhtml">
+                            <h:commandButton value="Seguir leyendo" action="verEventoM.xhtml">
                                 <f:actionListener binding="#{manejadorEventos.setEvento(event)}"/>
                             </h:commandButton>
                         </h:form>
