Registrar Usuario y modificar usuario acabado

--- a/GrupoA-war/web/miPerfil.xhtml
+++ b/GrupoA-war/web/miPerfil.xhtml
@@ -14,7 +14,7 @@
             </div>
         </div>
             <div class="col-md-4">
-                <h1>Perfil de  <h:outputText value="#{controlAutorizacion.usuario.nombreusuario}"/></h1>
+                <h1>Perfil de  <h:outputText value="#{login.user.nombreusuario}"/></h1>
             </div>
             <br/>
             <div class="col-md-4">
@@ -31,47 +31,47 @@
               <tbody>
                 <tr>
                   <td>Nombre:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.nombre}"/></td>
+                  <td><h:outputText value="#{login.user.nombre}"/></td>
                 </tr>
                 <tr>
                   <td>Apellidos</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.apellidos}"/></td>
+                  <td><h:outputText value="#{login.user.apellidos}"/></td>
                 </tr>
                 <tr>
                   <td>Email:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.email}"/></td>
+                  <td><h:outputText value="#{login.user.email}"/></td>
                 </tr>
                 <tr>
                   <td>Fecha de entrada:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.fechaentrada}"/></td>
+                  <td><h:outputText value="#{login.user.fechaentrada}"/></td>
                 </tr>
                 <tr>
                   <td>Dni:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.dni}"/></td>
+                  <td><h:outputText value="#{login.user.dni}"/></td>
                 </tr>
                 <tr>
                   <td>Fecha de nacimiento:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.fechanacimiento}"/></td>
+                  <td><h:outputText value="#{login.user.fechanacimiento}"/></td>
                 </tr>
                 <tr>
                   <td>Dirección postal:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.calle}"/></td>
+                  <td><h:outputText value="#{login.user.calle}"/></td>
                 </tr>
                 <tr>
                   <td>Código postal:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.codigopostal}"/></td>
+                  <td><h:outputText value="#{login.user.codigopostal}"/></td>
                 </tr>
                 <tr>
                   <td>Localidad:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.localidad}"/></td>
+                  <td><h:outputText value="#{login.user.localidad}"/></td>
                 </tr>
                 <tr>
                   <td>Provincia:</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.provincia}"/></td>
+                  <td><h:outputText value="#{login.user.provincia}"/></td>
                 </tr>
                 <tr>
                   <td>Sección</td>
-                  <td><h:outputText value="#{controlAutorizacion.usuario.cargo}"/></td>
+                  <td><h:outputText value="#{login.user.cargo}"/></td>
                 </tr>
               </tbody>
             </table>
