--- a/GrupoA-war/web/registrop.xhtml
+++ b/GrupoA-war/web/registrop.xhtml
@@ -123,6 +123,15 @@
                                         <f:selectItem itemValue = "1997" itemLabel = "1997" />
                                         <f:selectItem itemValue = "1996" itemLabel = "1996" />
                                         <f:selectItem itemValue = "1995" itemLabel = "1995" />
+                                        <f:selectItem itemValue = "1994" itemLabel = "1994" /> 
+                                        <f:selectItem itemValue = "1993" itemLabel = "1993" /> 
+                                        <f:selectItem itemValue = "1992" itemLabel = "1992" /> 
+                                        <f:selectItem itemValue = "1991" itemLabel = "1991" /> 
+                                        <f:selectItem itemValue = "1990" itemLabel = "1990" /> 
+                                        <f:selectItem itemValue = "1989" itemLabel = "1989" />
+                                        <f:selectItem itemValue = "1988" itemLabel = "1988" />
+                                        <f:selectItem itemValue = "1987" itemLabel = "1987" />
+                                        <f:selectItem itemValue = "1986" itemLabel = "1986" />
                                     </h:selectOneMenu>
                                 </span>
                               </div>	
