--- a/GrupoA-war/web/miPerfilM.xhtml
+++ b/GrupoA-war/web/miPerfilM.xhtml
@@ -14,7 +14,7 @@
             </div>
         </div>
             <div class="col-md-4">
-                <h1>Perfil de  <h:outputText value="#{controlAutorizacion.usuario.nombreusuario}"/></h1>
+                <h1>Perfil de  <h:outputText value="#{login.user.nombreusuario}"/></h1>
             </div>
             <br/>
             
@@ -33,55 +33,132 @@
               <tbody>
                 <tr>
                   <td>Nombre:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.nombre}"/></td>
+                  <td><h:inputText value="#{login.user.nombre}"/></td>
                 </tr>
                 <tr>
                   <td>Apellidos</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.apellidos}"/></td>
+                  <td><h:inputText value="#{login.user.apellidos}"/></td>
                 </tr>
                 <tr>
                   <td>Alias:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.nombreusuario}"/></td>
+                  <td><h:inputText value="#{login.user.nombreusuario}"/></td>
                 </tr>
                 <tr>
                   <td>Email:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.email}"/></td>
-                </tr>
-                <tr>
-                  <td>Fecha de entrada:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.fechaentrada}"/></td>
+                  <td><h:inputText value="#{login.user.email}"/></td>
                 </tr>
                 <tr>
                   <td>Dni:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.dni}"/></td>
+                  <td><h:inputText value="#{login.user.dni}"/></td>
                 </tr>
                 <tr>
                   <td>Fecha de nacimiento:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.fechanacimiento}"/></td>
+                  <td><div class="input-group">
+                                <span class="input-group-btn">
+                                    <h:selectOneMenu value = "#{login.dia}" class="form-control" > 
+                                        <f:selectItem itemValue = "01" itemLabel = "1" /> 
+                                        <f:selectItem itemValue = "02" itemLabel = "2" />
+                                        <f:selectItem itemValue = "03" itemLabel = "3" /> 
+                                        <f:selectItem itemValue = "04" itemLabel = "4" /> 
+                                        <f:selectItem itemValue = "05" itemLabel = "5" /> 
+                                        <f:selectItem itemValue = "06" itemLabel = "6" /> 
+                                        <f:selectItem itemValue = "07" itemLabel = "7" /> 
+                                        <f:selectItem itemValue = "08" itemLabel = "8" /> 
+                                        <f:selectItem itemValue = "09" itemLabel = "9" /> 
+                                        <f:selectItem itemValue = "10" itemLabel = "10" /> 
+                                        <f:selectItem itemValue = "11" itemLabel = "11" /> 
+                                        <f:selectItem itemValue = "12" itemLabel = "12" /> 
+                                        <f:selectItem itemValue = "13" itemLabel = "13" /> 
+                                        <f:selectItem itemValue = "14" itemLabel = "14" /> 
+                                        <f:selectItem itemValue = "15" itemLabel = "15" /> 
+                                        <f:selectItem itemValue = "16" itemLabel = "16" /> 
+                                        <f:selectItem itemValue = "17" itemLabel = "17" /> 
+                                        <f:selectItem itemValue = "18" itemLabel = "18" /> 
+                                        <f:selectItem itemValue = "19" itemLabel = "19" /> 
+                                        <f:selectItem itemValue = "20" itemLabel = "20" /> 
+                                        <f:selectItem itemValue = "21" itemLabel = "21" /> 
+                                        <f:selectItem itemValue = "22" itemLabel = "22" /> 
+                                        <f:selectItem itemValue = "23" itemLabel = "23" /> 
+                                        <f:selectItem itemValue = "24" itemLabel = "24" /> 
+                                        <f:selectItem itemValue = "25" itemLabel = "25" /> 
+                                        <f:selectItem itemValue = "26" itemLabel = "26" /> 
+                                        <f:selectItem itemValue = "27" itemLabel = "27" /> 
+                                        <f:selectItem itemValue = "28" itemLabel = "28" /> 
+                                        <f:selectItem itemValue = "29" itemLabel = "29" /> 
+                                        <f:selectItem itemValue = "30" itemLabel = "30" /> 
+                                        <f:selectItem itemValue = "31" itemLabel = "31" /> 
+                                    </h:selectOneMenu>
+                                </span>
+                                <span class="input-group-btn"></span>
+                                <span class="input-group-btn">
+                                    <h:selectOneMenu value = "#{login.mes}" class="form-control"> 
+                                        <f:selectItem itemValue = "01" itemLabel = "Enero" /> 
+                                        <f:selectItem itemValue = "02" itemLabel = "Febrero" />
+                                        <f:selectItem itemValue = "03" itemLabel = "Marzo" /> 
+                                        <f:selectItem itemValue = "04" itemLabel = "Abril" /> 
+                                        <f:selectItem itemValue = "05" itemLabel = "Mayo" /> 
+                                        <f:selectItem itemValue = "06" itemLabel = "Junio" /> 
+                                        <f:selectItem itemValue = "07" itemLabel = "Julio" /> 
+                                        <f:selectItem itemValue = "08" itemLabel = "Agosto" /> 
+                                        <f:selectItem itemValue = "09" itemLabel = "Septiembre" /> 
+                                        <f:selectItem itemValue = "10" itemLabel = "Octubre" /> 
+                                        <f:selectItem itemValue = "11" itemLabel = "Noviembre" /> 
+                                        <f:selectItem itemValue = "12" itemLabel = "Diciembre" /> 
+                                    </h:selectOneMenu>
+                                </span>
+                                <span class="input-group-btn"> </span>
+                                <span class="input-group-btn">
+                                    <h:selectOneMenu value = "#{login.anio}" class="form-control"> 
+                                        <f:selectItem itemValue = "2011" itemLabel = "2011" /> 
+                                        <f:selectItem itemValue = "2010" itemLabel = "2010" /> 
+                                        <f:selectItem itemValue = "2009" itemLabel = "2009" /> 
+                                        <f:selectItem itemValue = "2008" itemLabel = "2008" /> 
+                                        <f:selectItem itemValue = "2007" itemLabel = "2007" /> 
+                                        <f:selectItem itemValue = "2006" itemLabel = "2006" /> 
+                                        <f:selectItem itemValue = "2005" itemLabel = "2005" /> 
+                                        <f:selectItem itemValue = "2004" itemLabel = "2004" /> 
+                                        <f:selectItem itemValue = "2003" itemLabel = "2003" /> 
+                                        <f:selectItem itemValue = "2002" itemLabel = "2002" /> 
+                                        <f:selectItem itemValue = "2001" itemLabel = "2001" /> 
+                                        <f:selectItem itemValue = "2000" itemLabel = "2000" /> 
+                                        <f:selectItem itemValue = "1999" itemLabel = "1999" /> 
+                                        <f:selectItem itemValue = "1998" itemLabel = "1998" />
+                                        <f:selectItem itemValue = "1997" itemLabel = "1997" />
+                                        <f:selectItem itemValue = "1996" itemLabel = "1996" />
+                                        <f:selectItem itemValue = "1995" itemLabel = "1995" />
+                                        <f:selectItem itemValue = "1994" itemLabel = "1994" /> 
+                                        <f:selectItem itemValue = "1993" itemLabel = "1993" /> 
+                                        <f:selectItem itemValue = "1992" itemLabel = "1992" /> 
+                                        <f:selectItem itemValue = "1991" itemLabel = "1991" /> 
+                                        <f:selectItem itemValue = "1990" itemLabel = "1990" /> 
+                                        <f:selectItem itemValue = "1989" itemLabel = "1989" />
+                                        <f:selectItem itemValue = "1988" itemLabel = "1988" />
+                                        <f:selectItem itemValue = "1987" itemLabel = "1987" />
+                                        <f:selectItem itemValue = "1986" itemLabel = "1986" />
+                                    </h:selectOneMenu>
+                                </span>
+                              </div>	</td>
                 </tr>
                 <tr>
                   <td>Dirección postal:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.calle}"/></td>
+                  <td><h:inputText value="#{login.user.calle}"/></td>
                 </tr>
                 <tr>
                   <td>Código postal:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.codigopostal}"/></td>
+                  <td><h:inputText value="#{login.user.codigopostal}"/></td>
                 </tr>
                 <tr>
                   <td>Localidad:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.localidad}"/></td>
+                  <td><h:inputText value="#{login.user.localidad}"/></td>
                 </tr>
                 <tr>
                   <td>Provincia:</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.provincia}"/></td>
+                  <td><h:inputText value="#{login.user.provincia}"/></td>
                 </tr>
-                <tr>
-                  <td>Sección</td>
-                  <td><h:inputText value="#{controlAutorizacion.usuario.cargo}"/></td>
-                </tr>
+                
               </tbody>
             </table>
-                    <h:commandButton value="Guardar" type="submit"></h:commandButton>
+                    <h:commandButton value="Guardar" type="submit"  action="#{login.modificar()}"></h:commandButton>
                 </h:form>
           </div>
         <br/>
